--- a/public/pricing.css
+++ b/public/pricing.css
@@ -327,7 +327,7 @@ nav a:hover {
 
   header {
     display: grid;
-    grid-template-columns: .2fr auto minmax(600px, 3fr) auto .2fr;
+    grid-template-columns: .2fr auto 3fr auto .2fr;
   }
   
   .logo {
@@ -682,7 +682,35 @@ input#subjectTutoring-section:checked ~ #subjectTutoring {
   display: none;
   flex-direction: column;
   align-items: center;
-  padding: 2em 1em;
+  padding: 0em 1em 2em;
+}
+
+.course-section .heading {
+  padding: 12% .5em;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position-y: 50%;
+
+  width: 100vw;
+  position: relative;
+  left: 0%;
+  right: 0%;
+}
+
+#act.course-section .heading {
+  background-image: url(Images/lecture-hall.jpg);
+}
+
+#subjectTutoring.course-section .heading {
+  background-image: url(Images/books.jpg);
+}
+
+.course-section .heading h1 {
+  padding: .5em 1em;
+  border-radius: .5em;
+  background-color: var(--color-blue);
+  color: white;
+  width: max-content;
 }
 
 .course-section h1 {
@@ -691,7 +719,7 @@ input#subjectTutoring-section:checked ~ #subjectTutoring {
 }
 
 .course-section h2 {
-  color: var(--color-green);
+  color: var(--color-blue);
   font-size: 2.5em;
   margin-top: .5em;
   text-align: center;
@@ -807,7 +835,7 @@ input#subjectTutoring-section:checked ~ #subjectTutoring {
   background-color: var(--color-green);
   color: white;
   padding: 1em 2em;
-  margin-bottom: 2em;
+  margin-bottom: 1em;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -828,13 +856,12 @@ input#subjectTutoring-section:checked ~ #subjectTutoring {
 
 .practice-test-wrapper > h2 {
   color: white;
-  text-decoration: underline;
 }
 
 .practice-test-wrapper input {
   padding: .5em 1em;
-  border: 2px solid var(--color-green);
   border-radius: 1em;
+  border: none;
   font-size: 1rem;
   /* width: 100%; */
   flex: 1;
@@ -866,7 +893,7 @@ input#subjectTutoring-section:checked ~ #subjectTutoring {
   width: 16px;
   border-radius: 50%;
   border: 2px solid transparent;
-  border-top: 2px solid white;
+  border-top: 2px solid var(--color-green);
   animation: spin .5s linear infinite;
 }
 
@@ -949,6 +976,14 @@ input#paymentType:checked ~ .plans .plan-wrapper .one-time {
   display: block;
 }
 
+input#paymentType:not(:checked) ~ .plans .plan-wrapper.coming-soon::after {
+  display: none;
+}
+
+input#paymentType:checked ~ .plans .plan-wrapper.coming-soon::after {
+  display: block;
+}
+
 .plans {
   display: grid;
   column-gap: 1em;
@@ -963,6 +998,12 @@ input#paymentType:checked ~ .plans .plan-wrapper .one-time {
   grid-template-columns: 1fr;
 }
 
+#subjectTutoring .plans > .plan-wrapper {
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 .plan-wrapper {
   background-color: var(--color-primary);
   border-radius: 2em;
@@ -972,7 +1013,27 @@ input#paymentType:checked ~ .plans .plan-wrapper .one-time {
   position: relative;
   width: 100%;
   height: min-content;
-  /* max-width: 720px; */
+  max-width: 600px;
+}
+
+.plan-wrapper.coming-soon {
+  position: relative;
+  overflow: hidden;
+}
+
+.plan-wrapper.coming-soon::after {
+  content: attr(data-comingSoon);
+  display: block;
+  background-color: var(--color-green);
+  color: white;
+  font-weight: 900;
+  padding: .5em 3em;
+  position: absolute;
+  top: 2.5em;
+  right: 2.5em;
+  transform: translate(50%, -50%) rotate(45deg);
+  transform-origin: center;
+  border-radius: 1em;
 }
 
 .plan-wrapper.custom {
@@ -1007,6 +1068,7 @@ input#paymentType:checked ~ .plans .plan-wrapper .one-time {
 .plan-wrapper .length h5{
   font-size: 1.5em;
   font-weight: 900;
+  margin: 0;
 }
 
 .plan-wrapper > ul > li::before {
@@ -1058,80 +1120,6 @@ input#paymentType:checked ~ .plans .plan-wrapper .one-time {
   font-weight: 900;
 }
 
-/* #act .plan-wrapper.comprehensive {
-  border-color: var(--color-green);
-  width: calc(100% - 14px);
-  margin: calc(3em + 7px) 7px 7px 7px;
-} */
-
-/* #act .plan-wrapper.comprehensive::after {
-  position: absolute;
-  top: -7px; bottom: -7px;
-  left: -7px; right: -7px;
-  background: linear-gradient(45deg, var(--color-accent-3-light), var(--color-accent-4-light));
-  content: '';
-  z-index: -1;
-  border-radius: calc(2em + 7px);
-} */
-
-/* #act .plan-wrapper.comprehensive .title h3 {
-  color: var(--color-accent-3-light);
-}
-
-#act .plan-wrapper.comprehensive .length h5 {
-  color: var(--color-accent-3-light);
-}
-
-#act .plan-wrapper.comprehensive li::before {
-  background: var(--color-accent-3-light);
-}
-
-#act .plan-wrapper.comprehensive .select {
-  background-image: linear-gradient(45deg, var(--color-accent-3-light), 70%, var(--color-accent-4-light));
-} */
-
-.steps {
-  margin-top: 2em;
-}
-
-.steps .title {
-  background-color: var(--color-primary);
-  padding: 1em;
-  border-radius: 1em;
-  width: 100%;
-  margin: 1em 0em;
-}
-
-.steps .title.one h1 {
-  color: var(--color-accent-1-deep);
-}
-
-.steps .title.two h1 {
-  color: var(--color-accent-2-deep);
-}
-
-.steps .title.three h1 {
-  color: var(--color-accent-3-deep);
-}
-
-.steps .title.four h1 {
-  color: var(--color-accent-4-deep);
-}
-
-.steps .title.five h1 {
-  color: var(--color-accent-5-deep);
-}
-
-.steps p, .steps .list-wrapper {
-  font-size: 1.25em;
-  width: 90%;
-  margin-left: 5%;
-}
-
-.steps .list-wrapper li::before {
-  background-color: #939393;
-}
-
 .footnotes {
   color: #A3A3A3;
 }
@@ -1154,7 +1142,12 @@ input#paymentType:checked ~ .plans .plan-wrapper .one-time {
   }
 
   .course-section {
-    padding: 2em 10%;
+    padding: 0em 10% 2em;
+  }
+
+  .course-section .heading {
+    padding: 8%;
+    overflow: hidden;
   }
 
   .intro-wrapper {
@@ -1177,7 +1170,7 @@ input#paymentType:checked ~ .plans .plan-wrapper .one-time {
   }
   
   #act .plans {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
   }
 
   /* #act .plans::before {
@@ -1343,7 +1336,7 @@ input#paymentType:checked ~ .plans .plan-wrapper .one-time {
 
 @media screen and (min-width: 1112px) {
   #act .plans {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
