--- a/public/index.css
+++ b/public/index.css
@@ -496,10 +496,6 @@ nav a:hover {
   100% { transform: rotate(360deg); }
 }
 
-.modal-body button:hover {
-  transform: scale(1.1);
-}
-
 /* hero section */
 
 .hero {
@@ -1743,6 +1739,11 @@ footer li {
 
 footer li::before {
   content: none;
+}
+
+footer img {
+  display: inline;
+  width: 2em;
 }
 
 footer a {
