--- a/public/pricing.css
+++ b/public/pricing.css
@@ -26,6 +26,8 @@
   --color-blue: #101b42;
   /* --color-blue: #1D3C5D; */
 
+  --greyed-out-color: #A3A5AD;
+
 }
 
 *, *::before, *::after {
@@ -43,6 +45,27 @@ body {
   width: 100vw;
   margin: 0;
   background-color: var(--color-primary);
+}
+
+input, label, select, button {
+  display: block;
+}
+
+button:disabled {
+  background-color: var(--greyed-out-color) !important;
+  cursor: not-allowed !important;
+}
+
+button.loading::after {
+  content: '';
+  height: 1em;
+  width: 1em;
+  display: inline-block;
+  border-radius: 50%;
+  border: 2px solid transparent;
+  border-top-color: white;
+  animation: spin .5s linear infinite;
+  margin-left: 1em;
 }
 
 section {
@@ -446,11 +469,13 @@ nav a:hover {
   align-items: center;
   background-color: var(--color-blue);
   color: white;
-  padding: 2em 3em;
+  padding: 2em;
   position: relative;
   border-radius: 1em;
   margin: .5em;
   text-align: center;
+  max-height: 100%;
+  overflow-y: auto;
 }
 
 .modal-body .accent {
@@ -458,7 +483,7 @@ nav a:hover {
 }
 
 .modal-body .error { 
-  color: red;
+  color: var(--color-accent-5-deep);
 }
 
 .modal-body > .close {
@@ -470,14 +495,10 @@ nav a:hover {
 }
 
 .modal-body > .close svg {
-  color: rgb(218, 218, 218);
+  color: var(--greyed-out-color);
   fill: transparent;
   stroke: currentColor;
   stroke-width: 1.5;
-}
-
-.modal-body > .close:hover svg {
-  color: white;
 }
 
 .modal-body input {
@@ -1101,6 +1122,8 @@ input#paymentType:checked ~ .plans .plan-wrapper.coming-soon::after {
   border-radius: 1em;
   cursor: pointer;
   margin-top: .75em;
+  border: none;
+  width: 100%;
 }
 
 .plan-wrapper .select * {
@@ -1494,4 +1517,186 @@ footer .copyright {
     flex-direction: row;
     justify-content: space-around;
   }
+}
+
+
+
+
+
+
+/* check availability */
+
+#checkProgram > .modal-body {
+  background-color: white;
+  color: var(--color-blue);
+}
+
+.date-time {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.selection-wrapper {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.selection-wrapper input[type=checkbox] {
+  visibility: hidden;
+  position: absolute;
+  z-index: -1;
+}
+
+.selection-wrapper .day-item {
+  margin: 0;
+  margin-right: .5em;
+  padding: .2em;
+  height: 2em;
+  width: 2em;
+  text-align: center;
+  background-color: white;
+  color: var(--color-green);
+  border: 2px solid var(--color-green);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.selection-wrapper input[type=checkbox].invalid + .day-item {
+  color: var(--greyed-out-color);
+  border: 2px solid var(--greyed-out-color);
+}
+
+.selection-wrapper input[type=checkbox]:checked + .day-item {
+  background-color: var(--color-green);
+  color: white;
+}
+
+#lessonLength {
+  margin-top: 2em;
+  margin-bottom: .5em;
+}
+
+#openTimes {
+  margin: 0;
+  display: grid;
+  grid-template-rows: repeat(6, 1fr);
+  grid-auto-flow: column;
+}
+
+#openTimes > div {
+  color: var(--color-green);
+  position: relative;
+}
+
+#openTimes > div.disabled {
+  color: var(--greyed-out-color);
+}
+
+#openTimes > div > input {
+  position: absolute;
+  visibility: hidden;
+}
+
+#openTimes > div > input + label {
+  border: 2px solid transparent;
+  border-radius: .25em;
+  padding: .25em;
+}
+
+#openTimes > div > input:checked + label {
+  border-color: var(--color-green);
+}
+
+.start-end {
+  max-width: 60ch;
+}
+
+.reserve-prompt {
+  margin-top: 2em;
+  max-width: 60ch;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.reserve-prompt.hide {
+  display: none;
+}
+
+#reserveProgram > .modal-body {
+  background-color: white;
+  color: var(--color-blue);
+  padding-top: 3em;
+}
+
+#reserveProgram h5 {
+  margin: 0;
+  padding-top: 1em;
+}
+
+.contact-form label {
+  text-align: start;
+  position: relative;
+  height: 24px;
+  top: 0px;
+  /* left: 12px; */
+  font-size: 1em;
+  transition: all 100ms ease-in;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.contact-form label.placeholder {
+  top: 36px;
+  color: var(--greyed-out-color);
+  font-size: 1.25em;
+}
+
+.contact-form label.error {
+  color: var(--color-accent-5-deep);
+}
+
+.contact-form input {
+  border: none;
+  border-bottom: 2px solid var(--color-blue);
+  border-radius: 0%;
+  min-width: 30ch;
+  padding: .25em 0;
+  margin-bottom: .5em;
+  font-size: 1.25em;
+}
+
+#reserveProgram .back {
+  position: absolute;
+  top: 12px;
+  left: 12px;
+  color: var(--greyed-out-color);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  cursor: pointer;
+}
+
+#reserveProgram .back::before {
+  content: '';
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  border-left: 2px solid var(--greyed-out-color);
+  border-bottom: 2px solid var(--greyed-out-color);
+  transform: rotate(45deg);
+  margin-right: 4px;
+}
+
+#reserveProgram .back > p {
+  margin: 0;
+}
+
+.program-summary {
+  margin-top: 2em;
+  max-width: 60ch;
 }
