--- a/public/calendar.css
+++ b/public/calendar.css
@@ -379,6 +379,12 @@ select {
   content: url("Images/select-dropdown.png") !important;
 }
 
+.attendee-wrapper {
+  border: 1px solid black;
+  padding: 8px;
+  margin: 1em 0em;
+}
+
 .more-info {
   display: inline-block;
   font-size: 12px;
